# PPCN

./: .gitignore  CLAUDE.md  Childhood Cancer Catalog of Circular Extrachromosomal DNA API.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.sh
R/: install_packages.R
data/ccdi-pull/: biosamples_mbl_atrt.csv  patients_mbl_atrt.csv  shh_mbl_atrt_final.csv
docs/: RESEARCH_PLAN.md
scripts/: pull_ccdi_samples.py
scripts/bash/: jupyter.sh
scripts/utils/: ecdna_client.py
tests/: test_ecdna_client.py  test_placeholder.py
